feat: add websockets feature flag to firework-macros
- Added websockets feature to firework-macros/Cargo.toml to fix cfg warning
- This ensures the #[cfg(feature = "websockets")] check in routes!() macro works correctly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "firework-auth",
     "fwk",
 ]
-exclude = ["undergun"]
+exclude = ["undergun", "posts"]
 resolver = "2"
 
 [workspace.package]
