Reorganize project structure
- Rename firework -> core
- Rename firework-macros -> macros
- Move plugins to plugins/ directory
- Update all dependency paths
- Fix linkme dependency in templates
- Fix routes! macro cfg for websockets
- Clean up README files
- Remove test main.rs file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 members = [
-    "firework",
-    "firework-macros",
-    "firework-seaorm",
-    "firework-auth",
+    "core",
+    "macros",
+    "plugins/seaorm",
+    "plugins/auth",
     "fwk",
 ]
 exclude = ["undergun", "posts"]
