--- a/plugins/auth/Cargo.toml
+++ b/plugins/auth/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-firework = { path = "../firework" }
+firework = { path = "../../core" }
 jsonwebtoken = "9.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
