--- a/plugins/seaorm/Cargo.toml
+++ b/plugins/seaorm/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-firework = { path = "../firework" }
+firework = { path = "../../core" }
 sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
