--- a/posts/Cargo.toml
+++ b/posts/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-firework = { path = "../firework", features = [] }
+firework = { path = "../core", features = [] }
 tokio = { version = "1", features = ["full"] }
 linkme  = "0.3"
