--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,6 +3,9 @@ name = "firework"
 version = "0.1.0"
 edition = "2021"
 
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("websockets"))'] }
+
 [features]
 default = []
 testing = []
